overflow fix on mobile

--- a/amb_app/static/style.css
+++ b/amb_app/static/style.css
@@ -2,6 +2,7 @@
 body,
 html {
   height: 100%;
+  overflow-x: hidden;
   width: 100%;
   margin: 0;
   scroll-behavior: smooth;
@@ -140,9 +141,10 @@ html {
   text-align: center; 
   padding-top: 200px; 
   padding-bottom: 250px; 
-  overflow: hidden; 
+  overflow: hidden !important; 
   position: relative; 
   width: 100%; 
+  max-width: 100%;
   background-attachment: scroll; 
   background-size: cover; 
   -moz-background-size: cover; 
@@ -155,34 +157,22 @@ html {
   padding-top: 250px !important;
   padding-bottom: 300px !important; 
   max-width: 100%;
-  overflow: hidden !important;
   background-image: url('/static/images/index.jpeg'); 
 }
 
 #parallax-hoofd .parallax-two {
-  max-width: 100%;
-  overflow: hidden !important;
   background-image: url('/static/images/overmij.jpeg');
 }
 
 #parallax-hoofd .parallax-three {
-  max-width: 100%;
-  width: 100%; 
-  overflow: hidden !important;
   background-image: url('/static/images/werkwijze.jpeg');
 }
 
 #parallax-hoofd .parallax-four {
-  max-width: 100%;
-  width: 100%; 
-  overflow: hidden !important;
   background-image: url('/static/images/aanbod.jpeg');
 }
 
 #parallax-hoofd .parallax-five {
-  max-width: 100%;
-  width: 100%; 
-  overflow: hidden !important;
   background-image: url('/static/images/online.jpeg')
 }
 
